fix(text): ensure reset-text() mixin uses our base letter-spacing

--- a/scss/mixins/_reset-text.scss
+++ b/scss/mixins/_reset-text.scss
@@ -9,7 +9,7 @@
   text-decoration: none;
   text-shadow: none;
   text-transform: none;
-  letter-spacing: normal;
+  letter-spacing: $letter-spacing-base;
   word-break: normal;
   word-spacing: normal;
   white-space: normal;
